{
  "login": "Login",
  "email": "Email",
  "your_email": "Your email",
  "password": "Password",
  "your_password": "Your password",
  "forgot_password": "Forgot password?",
  "no_account": "You don't have an account yet?",
  "registration": "Registration",
  "registration_exclamation": "Registration!",
  "login_with_google": "Login with Google",
  "sign_up_with_google": "Sign up with Google",
  "sign_up": "Sign up",
  "name": "Name",
  "your_name": "Your name",
  "password_confirmation": "Password confirmation",
  "already_have_account": "You already have an account?",
  "join": "Join",
  "back": "Back",
  "my_groups": "My groups",
  "statistics": "Statistics",
  "group": "Group",
  "settings": "Settings",
  "profile": "Profile",
  "no_groups": "No groups",
  "join_group": "Join group",
  "you_are_not_a_member": "You are not a member of any group. Create a group or join via link.",
  "paste_code_here": "Paste code here and click on join button, or if it is copied on clipboard, just click Join immediately. If you do not have the join link yet, ask your friends.",
  "who_are_you": "Who are you?",
  "none_of_these": "None of these? Enter your name here",
  "forgot_password_text": "If you forget your password, just ask a reminder from us. We will contact you by email, if your email is registered.",
  "send_reminder": "Send reminder",
  "close": "Close",
  "user_is_taken": "User is taken",
  "user-is_taken_text": "Someone already using this user. Choose yourserlf, or sort it out with your friends, who you are.",
  "sign_up_failed": "Sign up failed",
  "sign_in_failed": "Sign in failed",
  "selected_currency": "Selected currency",
  "group_name": "Group name",
  "group_color": "Group color",
  "group_icon": "Group icon",
  "create_group": "Create group",
  "member_name": "Member name",
  "add_member": "Add member",
  "invalid_email": "Email is invalid",
  "cant_be_empty": "Can't be empty",
  "not_matching_passwords": "The two passwords are not the same",
  "group_create_failed": "Group creation failed, try again later",
  "members": "Members",
  "debts": "Debts",
  "categories": "Categories",
  "transactions": "Transactions",
  "something_went_wrong": "Something went wrong",
  "document_does_not_exists": "Document does not exists",
  "show_all_transactions": "Show all transactions",
  "show_all_statistics": "Show all statistics",
  "there_are_no_debts": "There are no debts in this group. Everyone is free to leave:)",
  "there_are_no_transactions": "There are no transactions in this group. Add your first transaction with the plus button.",
  "there_are_no_statistics": "There are no transactions in this group yet. Add your first transaction with the plus button, and inspect statistics later.",
  "add_transaction": "Add transaction",
  "other": "Other",
  "expense": "Expense",
  "transfer": "Transfer",
  "income": "Income",
  "type": "Type",
  "category": "Category",
  "no_category_found": "No category found. Please create least one to create a transaction.",
  "no_member_found": "No member found. How is this possible? What did you do???",
  "paid": "Paid",
  "gave_capital": "Gave",
  "gave": "gave",
  "date": "Date",
  "next": "Next",
  "member": "Member",
  "format_error": "Format error",
  "value_must_be_greater_than_zero": "Value must be greater than zero",
  "transfer_to": "Tranfer to",
  "add_income": "Add income",
  "add_expense": "Add expense",
  "invalid_value": "Invalid value",
  "date_cannot_be_empty": "Date cannot be empty",
  "currency_cannot_be_empty": "Currency cannot be empty",
  "member_cannot_be_empty": "Member cannot be empty",
  "category_cannot_be_empty": "Category cannot be empty",
  "add_transfer": "Add transfer",
  "transfer_name": "Transfer name",
  "transfer_from": "Transfer from",
  "exchange_rate": "Exchange rate",
  "save_transfer": "Save transfer",
  "save_income": "Save income",
  "save_expense": "Save expense",
  "transaction_creation_failed": "Transaction creation failed",
  "income_name": "Income name",
  "received_from": "Received form",
  "got": "Got",
  "expense_name": "Expense name",
  "equally": "Equally",
  "amounts": "Amounts",
  "weights": "Weights",
  "paid_for": "paid for",
  "edit": "Edit",
  "copy_invite_link": "Copy invite link",
  "group_statistics": "Group statistics",
  "group_settings": "Group settings",
  "delete_group": "Delete group",
  "leave_group": "Leave group",
  "if_you_leave": "Pls don't leave",
  "cannot_leave": "You cannot leave this group, because you are the owner. Transfer ownership (you can’t), or delete group.",
  "save_changes": "Save changes",
  "group_edit_failed": "Group edit failed",
  "create_category": "Create category",
  "add_new_category_name": "Add the new category's name",
  "type_name_and_add_member": "Type a name, and add member easily",
  "incorrect_group_id": "Incorrect group id",
  "select_member": "Select a member and join with clicking on it",
  "ok": "ok",
  "already_member": "You are member of this group",
  "already_member_of_the_group": "You are already member of this group with name: ",
  "member_is_taken": "This member is taken",
  "member_is_taken_by": "This member is taken by someone else. Choose another or join by input.",
  "paste_from_clipboard": "Paste from clipboard",
  "add_member_by_typing": "Add member by typing it's name",
  "member_delete_failed": "Member delete failed",
  "member_delete_cannot_remove": "This member is part of transactions, so cannot be removed.",
  "are_you_sure": "Are you sure?",
  "if_you_delete_category": "If you delete this category, nobody can use it.",
  "delete": "delete",
  "cannot_delete": "Cannot delete",
  "least_one_category": "There need to be least one category",
  "if_you_delete_group": "If you delete this group, it cannot be restored",
  "if_you_leave_group": "If you leave this group, you can rejoin later",
  "must_be_number": "Must be number",
  "must_be_zero_or_greater": "Must be zero or greater",
  "rename_category": "Rename category",
  "set_new_category_name": "Set new name from: ",
  "new_name": "New name",
  "delete_account": "Delete account",
  "logout": "Logout",
  "current_money": "Current money",
  "current_money_with_debts": "Current money with debts",
  "default_currency": "Default currency",
  "default_icon": "Default icon",
  "default_color": "Default color",
  "income_from": "Income from ",
  "settle_debt": "Settle debt",
  "do_you_want_to_settle_debt": "Do you want to settle debt ",
  "from": "from ",
  "to": "to ",
  "settle_debt_failed": "Settle debt failed",
  "if_you_delete_category_data": "If you delete this category, it won't be in your new groups automatically",
  "edit_expense": "Edit expense",
  "money_spent_by_person": "Money spent by person",
  "all_spent_money": "All spent money",
  "delete_member": "Delete member",
  "view_all_transactions": "View all transactions",
  "money_spent_by_categories": "Money spent by categories",
  "all_transfers": "All transfers",
  "all_income": "All income",
  "this_month": "This month",
  "last_month": "Last month",
  "today": "Today",
  "all_time": "All time",
  "member_delete_no_transactions_no_person": "This member has no transactions and no person belongs to it.",
  "member_delete_has_person": "Member cannot be removed, because a person belongs to it.",
  "member_no_transactions": "This member has no transactions.",
  "member_no_transactions_this_period": "This member has no transactions in this time period",
  "group_no_transactions_this_period": "This group has no transactions in this time period",
  "group_no_transactions": "This group has no transactions.",
  "money_spent_by_members": "Money spent by members"
}