...
                  onSubmit: (String? text) {
                    if (text != null && text.isNotEmpty) {
                      createGroupChangeNotifier.addMember(_memberNameTextEditingController.text);
                      _memberNameTextEditingController.text = '';
                    }
                  },
                  key: const Key('add_member_input_field'),
                  focusNode: _memberNameFocusNode,
                  textEditingController: _memberNameTextEditingController,
                  hintText: 'name'.tr,
                  labelText: 'member_name'.tr,
                  prefixIcon: Icon(Icons.group_add, color: createGroupChangeNotifier.color),
                  labelColor: createGroupChangeNotifier.color!,
                  focusColor: createGroupChangeNotifier.color!,
                ),
                SizedBox(height: h(16)),
                Button(
                  buttonColor: createGroupChangeNotifier.color!,
                  key: const Key('add_member_button'),
                  onPressed: () {
                    if (_memberNameTextEditingController.text.isNotEmpty) {
                      createGroupChangeNotifier.addMember(_memberNameTextEditingController.text);
                      _memberNameTextEditingController.text = '';
                    }
                  },
                  text: 'add_member'.tr,
                ),
                Button(
                  buttonColor: createGroupChangeNotifier.color!,
                  key: const Key('create_group_button'),
                  onPressed: () async {
                    if (createGroupChangeNotifier.members.isNotEmpty) {
                      try {
                        SpendingShareUser user = Provider.of(context, listen: false);
                        DocumentSnapshot<Map<String, dynamic>> userSnapshot =
                            await widget.firestore.collection('users').doc(user.databaseId).get();
...
