...
                SizedBox(height: h(6)),
                Form(
                  key: _formKey,
                  autovalidateMode: AutovalidateMode.onUserInteraction,
                  child: InputField(
                    validator: TextValidator.validateGroupNameText,
                    key: const Key('group_name_input'),
                    focusNode: _groupNameFocusNode,
                    textEditingController: _groupNameTextEditingController,
                    labelText: 'name'.tr,
                    hintText: 'group_name'.tr,
                    prefixIcon: const Icon(
                      Icons.group,
...
