...
                    isPasswordField: true,
                    labelText: 'password'.tr,
                    hintText: 'your_password'.tr,
                  ),
                  SizedBox(height: h(16)),
                  Button(
                    key: const Key('login_button'),
                    onPressed: () {
                      if (_formKey.currentState!.validate()) {
                        signInWithEmailAndPassword();
                      }
                    },
                    text: 'login'.tr,
...
